# betface_core

./: .gitignore  Makefile  README.rst  cron_task.sh  db.sqlite3  project-setup.md  pyproject.toml
api/examples/: post_tips.json
api/games/: serializers.py  urls.py  views.py
api/tips/: serializers.py  urls.py  views.py
core/project/: settings.py  urls.py
frontend/: urls.py  views.py
frontend/templates/: base.html  game_list.html  game_tips.html  scraper_logs.html
games/: admin.py  models.py  views.py
games/migrations/: 0001_initial.py  0002_sport_short_name.py  0003_alter_game_scores.py  0004_team_city.py  0005_alter_teamalias_unique_together_and_more.py  0006_alter_sport_short_name_alter_team_city.py  0007_alter_game_scores.py  0008_alter_game_game_time.py  0009_game_favourite.py
scrapers/: admin.py  models.py  views.py
scrapers/management/commands/: odds_api.py  run_scrapers.py
scrapers/migrations/: 0001_initial.py
scrapers/odds_api/: schedule.py
scrapers/odds_api/data/: odds_api_schedule.json
scrapers/scaper_logic/: betfirm.py  covers.py  dratings.py  dunkel.py  pickwise.py  utils.py  winners_whiners.py  wunderdog.py
scrapers/scaper_logic/data/: betfirm_20230813134801.json  betfirm_20230814200228.json  betfirm_20230814200240.json  dunkel.json  (+5 more)
scratch/games/: game.json
scratch/sources/: dunkel.csv
scratch/teams/: team_cleaned.json  teams.json  tinker.py
shared/: utils.py
tips/: admin.py  models.py
tips/migrations/: 0001_initial.py  0002_alter_tipster_source_alter_tipster_type.py  0003_alter_tip_bet_type.py
(+1 files in other folders)
